# geometry-lib

./: README.md  pyproject.toml  setup.py
geometry/: cli.py  shapes.py  utils.py
tests/: test_shapes.py
